fix dark mode

--- a/style.css
+++ b/style.css
@@ -379,8 +379,8 @@ body.dark-mode {
 
 body.dark-mode a {
   font-size: clamp(50px, 3vw, 100px);
-  font-family: Jost;
-  font-weight: 200;
+    font-family: Jost;
+    font-weight: 100;
   color: #D9D9D9;
   margin: 0px;
   text-decoration: none;
